Improve XXE Check
The scan should find patterns where the code is separated to multiple
lines.